@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

'title Domain Model

class MusgoSublime {
}

class HumanResourcesManager {
    name
    bornDate
    admDate
    address
    phoneNumber
    email
    idCard
    idNumber
}

class Collaborator {
    name
    bornDate
    admDate
    address
    phoneNumber
    email
    idCard
    idNumber
}

class Skill {
    skillName
}
MusgoSublime "1" -- "1..*" Collaborator : has >
MusgoSublime "1" -- "1..*" HumanResourcesManager : has >
Collaborator "*" -- "*" Skill : assigned to <
@enduml